# julian-boronat-de-task

./: .gitignore  README.md  pyproject.toml
app/db/: database.py
app/db/ddl/: 1_create_table_dim_books.sql  2_create_table_dim_lists.sql  3_create_table_dim_time.sql  4_create_table_fact_book_list_rank.sql
app/dbt/transform/: dbt_project.yml
app/dbt/transform/nytimes_books_project/: profiles.yml
app/dbt/transform/nytimes_books_project/tests/: test_db_connection.yml
app/loaders/: launcher.py  utils.py
app/loaders/nytimes_books_api/: lists_overview_loader.py
